Upgrade Next.js to 16.1.6 to fix CVE-2025-66478

--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@react-google-maps/api": "^2.20.7",
     "@techstark/opencv-js": "^4.11.0-release.1",
+    "@vercel/edge": "^1.2.2",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.542.0",
-    "next": "15.5.2",
+    "next": "^16.1.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0",
